--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"format:php": "vendor/bin/phpcbf",
 		"format": "npm run format:js && npm run format:css && npm run format:php",
 		"lint-staged": "lint-staged",
-		"build": "wp-scripts build",
+		"build": "wp-scripts build --experimental-modules --webpack-copy-php --blocks-manifest --webpack-src-dir=research-press/src/blocks --output-path=research-press/build",
 		"prepare": "husky",
 		"version": "node scripts/updateVersion.js && npm run format:php; git add research-press/{style.css,readme.txt}",
 		"release": "npm version patch && git push --follow-tags"
