Updated CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
             - name: Deploy on server
               run: |
                   ssh ${{ secrets.LIGHTSAIL_USER }}@${{ secrets.LIGHTSAIL_HOST }} << 'EOF'
-                    unzip -o /tmp/${{ github.event.repository.name }}-${{ github.ref_name }}.zip -d ${{ secrets.LIGHTSAIL_DIR }}
+                    mkdir -p '${{ secrets.LIGHTSAIL_DIR }}/${{ github.event.repository.name }}'
+                    unzip -o /tmp/${{ github.event.repository.name }}-${{ github.ref_name }}.zip -d '${{ secrets.LIGHTSAIL_DIR }}/${{ github.event.repository.name }}'
                     rm /tmp/${{ github.event.repository.name }}-${{ github.ref_name }}.zip
                   EOF
